# Native-Systems-Language

./: .gitignore  CMakeLists.txt  License.md  README.md
examples/: async_demo.nsl  features.nsl  game_engine.nsl  hello.nsl  memory_demo.nsl  modules_demo.nsl
src/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  compiler.cpp  compiler.hpp  diagnostics.cpp  diagnostics.hpp  ir.cpp  ir.hpp  irgen.cpp  irgen.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  sema.cpp  sema.hpp  token.hpp  types.cpp  types.hpp
tests/: CMakeLists.txt  main.cpp  test_codegen.cpp  test_lexer.cpp  test_parser.cpp  test_sema.cpp
